Fixed mobile items being shifted

--- a/website/styles/style.css
+++ b/website/styles/style.css
@@ -150,13 +150,18 @@ span img {
     height: 100%;
 }
 
+.form-container {
+    max-height: 100px;
+    flex: 3 1 100%;
+}
+
 .container {
     max-width: 1500px;
     max-height: 1800px;
     margin-top: 150px;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
+    flex-direction: row;
     align-self: center;
     margin-left: auto;
     margin-right: auto;
@@ -302,11 +307,6 @@ span img {
 }
 
 .cable-config a:before {
-    content: &amp;
-    quot;
-    ?&amp;
-    quot;
-    ;
     height: 15px;
     width: 15px;
     border-radius: 50%;
